--- a/Client/package.json
+++ b/Client/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "expo": "~47.0.6",
+    "expo-image-picker": "~14.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "expo-image-picker": "~14.0.1"
+    "tesseract.js": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
