--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
     "expo": "~47.0.6",
     "expo-image-picker": "~14.0.1",
     "expo-status-bar": "~1.4.2",
+    "jimp": "^0.16.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "tesseract.js": "^3.0.3"
