--- a/Server/package.json
+++ b/Server/package.json
@@ -14,8 +14,10 @@
     "config": "^3.3.8",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jimp": "^0.16.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "tesseract.js": "^3.0.3"
   }
 }
