--- a/Client/package.json
+++ b/Client/package.json
@@ -9,12 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.1.3",
     "expo": "~47.0.6",
+    "expo-font": "^11.0.1",
     "expo-image-picker": "~14.0.1",
     "expo-status-bar": "~1.4.2",
     "jimp": "^0.16.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-screens": "~3.18.0",
     "tesseract.js": "^3.0.3"
   },
   "devDependencies": {
