--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "config": "^3.3.8",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "jimp": "^0.16.2",
     "jsonwebtoken": "^8.5.1",
