--- a/Client/package.json
+++ b/Client/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
+    "start": "expo start -c",
+    "android": "expo start -c --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
@@ -21,7 +22,8 @@
     "jwt-decode": "^3.1.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-dropdown-select-list": "^2.0.2",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "^2.13.0",
     "react-native-screens": "~3.18.0",
     "react-redux": "^8.0.5",
     "tesseract.js": "^3.0.3"
